# nutri-checker

./: .gitattributes  .gitignore  pyproject.toml
data/: missing_values.json  table_Ciqual_2020_FR_20200707.xls
notebooks/: dev.ipynb
nutri_checker/data/: ajr.py  loader.py
nutri_checker/models/: food.py
nutri_checker/search/: bm25.py
nutri_checker/ui/: analytics.py  back.py  food_register.py  render.py  widgets.py
